--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 # Core dependencies
 click==8.1.7
 rich==13.7.0
+python-dateutil==2.8.2
+
+# Data handling
+pandas==2.1.4
+numpy==1.26.2
 
 # Testing
 pytest==7.4.3
