--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,14 @@ python-dateutil==2.8.2
 pandas==2.1.4
 numpy==1.26.2
 
+# Phase 2: Data Collection
+snscrape==0.7.0.20230622  # For Twitter scraping
+praw==7.7.1  # For Reddit scraping
+
 # Testing
 pytest==7.4.3
 pytest-cov==4.1.0
+pytest-mock==3.12.0
 
 # Development
 black==23.12.1
