--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,8 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = -v --tb=short
+markers =
+    integration: marks tests as integration tests (deselect with '-m "not integration"')
+filterwarnings =
+    ignore::DeprecationWarning:importlib
+    ignore::RuntimeWarning:pandas.core.nanops
