--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,10 @@ sphinx==7.2.6
 transformers==4.36.2
 nltk==3.8.1
 emoji==2.8.0
+
+# Phase 6: Visualization
+matplotlib==3.8.2
+seaborn==0.13.2
+networkx==3.1
+wordcloud==1.9.2
+plotly==5.18.0
