--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,7 @@ wordcloud==1.9.2
 plotly==5.18.0
 dash==2.15.0
 openai==1.30.1
+streamlit==1.30.0
+streamlit-plotly-events==0.0.6
+python-louvain==0.16
+scikit-learn==1.3.2
